--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,14 +1,14 @@
 body {
     font-family: Arial, sans-serif;
     font-size: 16px;
-    color: #333;
+    color: #e0f7fa;
     padding: 20px;
-    background-color: #f4f4f4;
+    background-color: #e0f7fa;
 }
 
 h2 {
     font-size: 24px;
-    color: #666;
+    color: #e0f7fa;
     margin-bottom: 15px;
     border-bottom: 2px solid #ccc;
     padding-bottom: 5px;
