--- a/HolidayHousings/static/css/style.css
+++ b/HolidayHousings/static/css/style.css
@@ -1,16 +1,16 @@
 body {
     font-family: Arial, sans-serif;
     font-size: 16px;
-    color: #333;
+    color: #d32f2f;
     padding: 20px;
-    background-color: #f4f4f4;
+    background-color: #d32f2f;
 }
 
 h2 {
     font-size: 24px;
-    color: #666;
+    color: #d32f2f;
     margin-bottom: 15px;
-    border-bottom: 2px solid #ccc;
+    border-bottom: 2px solid #d32f2f;
     padding-bottom: 5px;
 
 
